Deploiements/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  type: NodePort 
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80       
      targetPort: 80 
      nodePort: 30007
